<resources>
    <string name="app_name">Kirin recipe</string>
    <string name="welcome">Your recipe mix is up to you!</string>
    <string name="basic_information">Basic information</string>
    <string name="name_label">Name</string>
    <string name="Age_label">Age</string>
    <string name="Gender_label">Gender</string>
    <string name="name_hint"><![CDATA[First name & Last name]]></string>
    <string name="gender_hint">Choose your Gender here</string>
    <string name="height_label">Height</string>
    <string name="weight_label">Weight</string>
    <string name="age_hint">Your age</string>
    <string name="height_hint">Your height (cm)</string>
    <string name="weight_hint">Your weight (kg)</string>
    <string name="Preference_info">Preference</string>
    <string name="favorite_label">Favorite</string>
    <string name="favorite_hint">Choose your favorite type here</string>
    <string name="dislike_label">Dislike</string>
    <string name="Sign_out">Sign out</string>
    <string name="about_Setting">About us</string>
    <string name="contact_Setting">Pk with us</string>
    <string name="userinfo_Setting">Basic information</string>
    <string name="dislike_Setting">Dislike recipe</string>
    <string name="history_Setting">History record</string>
    <string name="search_recipe">Search</string>
    <string name="searchbar_diy"> Please enter the keywords</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dislike_hint">Choose your dislike type here</string>
    <string-array name="recipe_type">
        <item>Choose your main recipe type here</item>
        <item>Seafood</item>
        <item>Pork</item>
        <item>Mutton</item>
        <item>Beef</item>
        <item>Poultry</item>
        <item>Vegetables</item>
    </string-array>
    <string-array name="favorite_type">
        <item>Choose your favorite type here</item>
        <item>Seafood</item>
        <item>Pork</item>
        <item>Mutton</item>
        <item>Beef</item>
        <item>Poultry</item>
        <item>Vegetables</item>
    </string-array>
    <string-array name="dislike_type">
        <item>Choose your dislike type here</item>
        <item>Seafood</item>
        <item>Pork</item>
        <item>Mutton</item>
        <item>Beef</item>
        <item>Poultry</item>
        <item>Vegetables</item>
    </string-array>
    <string-array name="Gender_type">
        <item>Choose your Gender here</item>
        <item>Male</item>
        <item>Female</item>
        <item>None</item>
    </string-array>
    <string name="stir_fried_pork_with_scallions">

Stir fried pork with scallions
        \nBeijing Cuisine
        \n
\nPer 100g - calories: 143 kcal
\nIngredients: 65g pork, 15g green Onions
\nSeasoning: 2g ginger, 4g garlic, 2g cooking wine, 4g soy sauce, 2g vinegar, 2g salt, 2g sugar, trace pepper, trace starch, 2g monosodium glutamate
\n
\nSteps:
\n1: In a mixing bowl, combine the meat, starch, cooking wine, pepper, and refined salt.
\n2: slice the green onion into small pieces.
\n3: heat a wok, pour in cooking oil, wait for the temperature of the oil to rise, then add the meat and stir-fry on high heat.
\n4: Cook until the ginger and garlic are fragrant.
\n5: Add the onion and stir-fry for a few minutes.
\n6: add the cooking wine, soy sauce, sugar, and salt, then the vinegar along the side of the pot, and finally the MSG.
    </string>
    <string name="lamb_soup">

Lamb soup
\n
\nPer 100 g - Calories: 62 kcal
\nIngredients: 90g lamb
\nSeasoning: cooking wine, 5g green onion, 2g ginger, pepper, dried orange peel, hawthorn, 3g salt
\n
\nSteps:
\n1: Soak the lamb in cool water for two hours, changing the water at intervals of one hour.
\n2: Wash the lamb with water and cut it into small pieces.
\n3: Pour enough water into the pot, put the cut lamb pieces into the pot.
\n4: medium heat do open the pot and skim off the foam, pour in the cooking wine.
\n5: then add peppercorns, onion and ginger, dried orange peel and hawthorn.
\n6: cover the pot, turn low heat and slow stew 1-1.5 hours later.
\n7: the orange peel and hawthorn out, then sprinkle the appropriate amount of salt.
\n8: turn the medium heat and continue to stew for 15-20 minutes and then turn off the heat can be eaten.

    </string>
    <string name="cumin_lamb">
Cumin lamb
\n
\nPer 100g - Calories: 142 kcal
\nIngredients: 90g lamb
\nSeasoning: 5g soy sauce, tahini powder, 3g cumin granules, salt to taste, 2g cumin powder, chili powder, pepper powder, cooked white sesame seeds
\n
\nSteps:
\n1: Soak the lamb in cool water for two hours, changing the water at intervals of one hour.
\n2: Wash the lamb with water and cut it into small pieces.
\n3: Pour enough water into the pot and put the cut lamb pieces into the pot.
\n4: medium heat do open the pot and skim off the foam, pour in the cooking wine.
\n5: then add peppercorns, onion and ginger, dried orange peel and hawthorn.
\n6: cover the pot, turn low heat and slow stew 1-1.5 hours later.
\n7: the orange peel and hawthorn out, then sprinkle the appropriate amount of salt.
\n8: turn the medium heat and continue to stew for 15-20 minutes and then turn off the heat can be eaten.
    </string>
    <string name="sauted_meat_shreds_with_soy_bean_paste">
Sauted meat shreds with soy bean paste
        \nBeijing Cuisine
\n
\nPer 100g - calories: 162 kcal
\nIngredients: 50g pork tenderloin, 10g green Onions, 10g bean slices, 10g cucumber
\nSeasoning: 5g sweet flour sauce, 3g white sugar, 2g sesame oil, 5g soy sauce, trace cooking wine, 5g egg white, trace starch, trace scallion ginger water
\n
\nSteps:
        \n1: cut pork tenderloin into thin shreds.
\n2: add salt, soy sauce, pepper, cooking wine, cooking oil, mix well and marinate for 20 minutes.
\n3: Place the bean skin in boiling water for 3 minutes and set aside.
\n4: cut the white onion into thin shreds and the cucumber into strips; set aside.
\n5: pour the sweet noodle sauce into a mixing bowl and stir in the sugar, sesame oil, green onion, and ginger water.
\n6: marinated shredded meat, egg white, starch, and thoroughly mixed.
\n7: heat a small amount of oil in a pan over medium heat, pour in the marinated meat, quickly scraped, and stir-fried until the meat shreds brown Sheng.
\n8: in the pan with the remaining oil, pour in the sweet noodle sauce and stir well.
\n9: stir-fry thoroughly, then add the shredded meat stir-fry.
\n10: to evenly coat all shredded meat with sauce.
    </string>
    <string name="grilled_eggplant">
Grilled eggplant
        \nBeijing Cuisine
\n
\nPer 100g - calories: 65 kcal
Ingredients: 60g eggplant, 10g meat slices, 5g carrot slices, 5g green pepper segments
\nSeasoning: 5g green Onions, 5g garlic
\n
\nSteps:
        \n1: Peel the eggplant, cut it into hobble pieces, and wet the surface.
\n2: sprinkle dry starch on top, then turn the eggplant pieces in the pot to distribute the starch evenly.
\n3: Sprinkle dry starch on the eggplant pieces again, making the eggplant wet, turn the eggplant pieces in the pot, and make the starch hang evenly on the eggplant.
\n4: pour the oil into the pot, and heat the oil to make bubbles around the eggplant block.
\n5: cook all of the eggplant pieces over medium heat.
\n6: if the surface of the eggplant block is hard, you can fish it out.
\n7: frying pan , heat the oil to about 80% of its original temperature, then add all of the eggplant pieces and re-fry until the eggplant is cooked. Control the oil by removing it from it.
\n8: Heat a small amount of oil in a separate pan and stir in the minced garlic. Stir in the sliced meat, carrots, and green pepper.
\n9: Pour the sauce into the pan and stir until the gravy is transparent.
\n10: Pour the fried eggplant pieces into the gravy, sprinkle with shredded green onion, quickly stir-fry, and allow the gravy to hang evenly on the eggplant.
\n11: Remove from the pan and drizzle with oil.
    </string>
    <string name="fish_head_with_minced_pepper">
Fish Head with Minced Pepper
\nHunan Cuisine
        \n
\nPer 100g - calories: 113 kcal
\nIngredients: 70g fish head, 5g green onion, 2g ginger, 3g garlic, 10g chopped chilli
\nSeasoning: 5g salt, a little pepper, 5g chicken essence
\n
        \nSteps:
\n1: Scrub fish head with salt, rinse off brine, and rub evenly with one teaspoon pepper, half tablespoon cooking oil, half teaspoon salt, and half teaspoon chicken seasoning.
\n2: bottom onion, ginger, and garlic
\n3: steam chopped pepper for 8 minutes on a false fire for 2 minutes.
\n4: add minced onion, ginger, and garlic.
\n5: heat the oil and pour it over the fish when it begins to smoke.
    </string>
    <string name="granny_smith">
Granny smith
\nHunan Cuisine
        \n
\nPer 100g - calories: 89 kcal
\nIngredients: 50g dried plum vegetables, 10g pork belly, 5g peanuts, 5g rice, 10g red pepper, 5g green onion, 5g garlic shoots
\nSeasoning: 3g light soy sauce, a little pepper, a little salt, 3g chicken essence, 4g green pepper
\n
        \nSteps:
\n1: dried plum cabbage warm water soak half an hour.
\n2: prepare the side dishes.
\n3: chopped chili pepper, onion, and ginger are cut; garlic seedlings are chopped.
\n4: Streaky Pork is frozen and cut into small dice.
\n5: cook the peanut rice in the microwave oven, peel it, and then fry it in a frying pan to make it crisper.
\n6: heat the oil in a pot, then brown the onion and ginger, then stir-fry the pancetta, add soy sauce and a little soy sauce for color, stir-fry the dried plum vegetables, add a small spoonful of water, stir-fry the chili peppers, then add garlic, salt, chicken essence, pepper, and pour in the peanut rice.
    </string>
    <string name="roast_duck">
JinLin Roast Duck
\nSu Cuisine
        \n
\nPer 100g - calories: 265 kcal
\nIngredients: 80g duck, 10g potato
\nSeasoning: 5g soy sauce, a little cayenne pepper, 2g ginger, 3g maltose, a little ground Chinese pepper, cinnamon, star anise, a little cooking wine, a little salt
\n
\nSteps:
        \n1: Wash the duck, control the water, rub it all over with salt, then add soy sauce, cooking wine, star anise, cinnamon, pepper powder, chili powder, ginger, mix these seasonings well, marinate the duck in it, place it in a plastic bag, place it in the refrigerator, and marinate it overnight.
\n2: The marinated duck will be removed the next day and placed in a cool place to dry naturally.
\n3: Next, dilute the maltose with a little water and brush the duck all over with a brush, making sure to coat all of the duck
\n4: Line a baking dish with tin foil and place the potato slices in it.
\n5: bake for 1 hour on the lower middle layer in a preheated 160 degree oven, after 30 minutes remove and brush once with maltose water, and wrap the wings and joints in tinfoil, after 1 hour turn the oven down to 200 degrees and bake for about 15 minutes.

    </string>
</resources>