<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:typeface="serif"
    android:background="@drawable/underline"
    tools:context=".Userinfo">

    <TextView
        android:id="@+id/Basicinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@color/Themecolor5"
        android:gravity="center_horizontal"
        android:text="@string/basic_information"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="50dp"
        android:background="@drawable/underline2"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Basicinfo" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems = "10"
        android:hint = "@string/name_hint"
        android:inputType = "textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
        app:layout_constraintStart_toEndOf="@+id/name_label" />

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="55dp"
        android:background="@drawable/underline2"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/Gender_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <EditText
        android:id="@+id/gender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/gender_hint"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/gender_label"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/age_label"
        android:layout_width="40dp"
        android:background="@drawable/underline2"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/Age_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_text" />

    <EditText
        android:id="@+id/age_text"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/age_hint"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/age_label"
        app:layout_constraintStart_toEndOf="@+id/age_label" />

    <TextView
        android:id="@+id/height_label"
        android:layout_width="52dp"
        android:background="@drawable/underline2"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/height_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_label" />

    <EditText
        android:id="@+id/height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/height_hint"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/height_label"
        app:layout_constraintStart_toEndOf="@+id/height_label" />

    <TextView
        android:id="@+id/weight_label"
        android:layout_width="52dp"
        android:background="@drawable/underline2"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/weight_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_label" />

    <EditText
        android:id="@+id/weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/weight_hint"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/weight_label"
        app:layout_constraintStart_toEndOf="@+id/weight_label" />

    <TextView
        android:id="@+id/Preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:background="@color/Themecolor5"
        android:gravity="center_horizontal"
        android:text="@string/Preference_info"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_text" />

    <TextView
        android:id="@+id/favorite_label"
        android:layout_width="62dp"
        android:background="@drawable/underline2"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/favorite_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Preference" />

    <EditText
        android:id="@+id/favorite_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/favorite_hint"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/favorite_label"
        app:layout_constraintStart_toEndOf="@+id/favorite_label" />

    <TextView
        android:id="@+id/dislike_label"
        android:layout_width="55dp"
        android:background="@drawable/underline2"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/dislike_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_label" />

    <EditText
        android:id="@+id/dislike_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/dislike_hint"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/dislike_label"
        app:layout_constraintTop_toBottomOf="@+id/favorite_text" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dislike_label"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="SaveandNext"/>


</androidx.constraintlayout.widget.ConstraintLayout>