<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:typeface="serif"
    android:background="@drawable/underline"
    tools:context=".Basicinformation">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Basicinfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/Themecolor5"
            android:gravity="center_horizontal"
            android:text="@string/basic_information"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_label2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/underline2"
            android:gravity="center"
            android:text="@string/name_label"
            android:textColor="@color/black"
            android:typeface="serif" />

        <TextView
            android:id="@+id/name_text2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:typeface="serif" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gender_label2"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/underline2"
            android:gravity="center"
            android:text="@string/Gender_label"
            android:textColor="@color/black"
            android:typeface="serif" />

        <TextView
            android:id="@+id/gender_text2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/gender_hint"
            android:typeface="serif" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/age_label2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/underline2"
            android:gravity="center"
            android:text="@string/Age_label"
            android:textColor="@color/black"
            android:typeface="serif" />

        <TextView
            android:id="@+id/age_text2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/age_hint"
            android:inputType="number"
            android:typeface="serif"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/height_label2"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/underline2"
            android:gravity="center"
            android:text="@string/height_label"
            android:textColor="@color/black"
            android:typeface="serif" />

        <TextView
            android:id="@+id/height_text2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/height_hint"
            android:inputType="number"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weight_label2"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/underline2"
            android:gravity="center"
            android:text="@string/weight_label"
            android:textColor="@color/black"
            android:typeface="serif" />

        <TextView
            android:id="@+id/weight_text2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/weight_hint"
            android:inputType="number"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Preference2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/Themecolor5"
            android:gravity="center_horizontal"
            android:text="@string/Preference_info"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/favorite_label2"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/underline2"
            android:gravity="center"
            android:text="@string/favorite_label"
            android:textColor="@color/black"
            android:typeface="serif" />

        <TextView
            android:id="@+id/favorite_text2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:typeface="serif"
            android:hint="@string/favorite_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dislike_label2"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/underline2"
            android:gravity="center"
            android:text="@string/dislike_label"
            android:textColor="@color/black"
            android:typeface="serif" />

        <TextView
            android:id="@+id/dislike_text2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:typeface="serif"
            android:hint="@string/dislike_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:text="Update"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:text="Cancel"
            android:layout_marginStart="50dp"
            android:onClick="GotoSetting2"
            android:textStyle="bold"
            android:typeface="serif" />

    </LinearLayout>
</LinearLayout>